Deixando o codigo mais limpo

--- a/Symfony-Biblioteca/app/Resources/views/base.html.twig
+++ b/Symfony-Biblioteca/app/Resources/views/base.html.twig
@@ -1,5 +1,5 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="pt-BR">
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -7,19 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}"/>
     <!-- Bootstrap CSS -->
-    <link
-            rel="stylesheet"
-            href="https://bootswatch.com/4/journal/bootstrap.min.css"
-    >
-
+    <link rel="stylesheet" href="https://bootswatch.com/4/journal/bootstrap.min.css">
+    <!-- AngularJS 1.7.8 -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular.min.js"></script>
+    <!-- JQuery 3.4.0 -->
     <script
-            src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular.min.js">
-    </script>
-
-    <script
-            src="https://code.jquery.com/jquery-3.4.0.min.js"
-            integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="
-            crossorigin="anonymous">
+        src="https://code.jquery.com/jquery-3.4.0.min.js"
+        integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="
+        crossorigin="anonymous">
     </script>
 
     <title>{% block title %}Welcome!{% endblock %}</title>
@@ -95,7 +90,6 @@
         height: 20rem !important;
     }
 </style>
-<!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
